--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 9</title>
-   
+
+    <script defer src="goods.js"></script>
     <script defer src="task01.js"></script>
    
 </head>
